added feature entry group
